Rebased on new design

--- a/mail.html
+++ b/mail.html
@@ -43,10 +43,20 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, enim, pariatur. Ab assumenda, accusantium! Consequatur magni placeat quae eos dicta, cum expedita sunt facilis est impedit possimus dolorum sequi nostrum nobis sit praesentium molestias nulla laudantium fugit corporis nam ut saepe harum ipsam? Debitis accusantium, omnis repudiandae modi, distinctio illo voluptatibus aperiam odio veritatis, quam perferendis eaque ullam. Temporibus tempore ad voluptates explicabo ea sit deleniti ipsum quos dolores tempora odio, ab corporis molestiae, eaque optio, perferendis! Cumque libero quia modi! Totam magni rerum id iusto explicabo distinctio, magnam, labore sed nemo expedita velit quam, perspiciatis non temporibus sit minus voluptatum. Iste, cumque sunt suscipit facere iusto asperiores, ullam dolorum excepturi quidem ea quibusdam deserunt illo. Nesciunt voluptates repellat ipsam.</p>
 		</li>
 
-		<li data-content="settings">
-			<p>Settings Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nam magni, ullam nihil a suscipit, ex blanditiis, adipisci tempore deserunt maiores. Nostrum officia, ratione enim eaque nihil quis ea, officiis iusto repellendus. Animi illo in hic, maxime deserunt unde atque a nesciunt? Non odio quidem deserunt animi quod impedit nam, voluptates eum, voluptate consequuntur sit vel, et exercitationem sint atque dolores libero dolorem accusamus ratione iste tenetur possimus excepturi. Accusamus vero, dignissimos beatae tempore mollitia officia voluptate quam animi vitae.</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique ipsam eum reprehenderit minima at sapiente ad ipsum animi doloremque blanditiis unde omnis, velit molestiae voluptas placeat qui provident ab facilis.</p>
+		<li data-content="adduser">
+			<h1>Add A User</h1>
+			<form action="adduser.php" method = "post" onsubmit= "return validateForm();">
+				<label for="first_name">First Name:</label>
+				<input class = "adduserinput" type="text" id="first_name" name="first_name">
+				<label for="last_name">Last Name:</label>
+				<input class = "adduserinput" type="text" id="last_name" name="last_name">
+				<label for="username">Username:</label>
+				<input class = "adduserinput" type="text" id="username" name = "username">	
+				<label for="password">Password:</label>
+				<input class = "adduserinput" type="text" id="password" name = "password">
+				<input type="submit">
+			</form>
+			<span id="error"></span>
 		</li>
 
 		<li data-content="bucket">
@@ -62,7 +72,7 @@
 			<li><a data-content="new" href="#0">Scribe</a></li>
 			<li><a data-content="sent" href="#0">Sent</a></li>
 			<li><a data-content="store" href="#0">Archives</a></li>
-			<li><a data-content="settings" href="#0">Settings</a></li>
+			<li><a data-content="adduser" href="#0">Add User</a></li>
 			<li><a data-content="bucket" href="#0">Bucket</a></li>
 		</ul> <!-- cd-tabs-navigation -->
 	</nav>
@@ -70,5 +80,6 @@
 </div> <!-- cd-tabs -->
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="js/adduser.js"></script>
 </body>
 </html>
